--- a/HomeMates/VIew/TaskTableViewCell/TasksTableViewCell.xib
+++ b/HomeMates/VIew/TaskTableViewCell/TasksTableViewCell.xib
@@ -70,19 +70,19 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="任務名稱底家" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovV-4u-RGL">
-                        <rect key="frame" x="76" y="38" width="92" height="46.5"/>
+                        <rect key="frame" x="76" y="38" width="92" height="42.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="積分放在這" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7C-DR-feW">
-                        <rect key="frame" x="76" y="88.5" width="76.5" height="18"/>
+                        <rect key="frame" x="76" y="84.5" width="76.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="雙週任務" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aw5-qs-8Zo">
-                        <rect key="frame" x="228" y="80.5" width="62" height="18"/>
+                        <rect key="frame" x="228" y="50.5" width="62" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="bbm-GO-adM"/>
                         </constraints>
@@ -91,13 +91,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="50 點" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A0y-HS-z66">
-                        <rect key="frame" x="288" y="73.5" width="67" height="33"/>
+                        <rect key="frame" x="288" y="69.5" width="67" height="33"/>
                         <fontDescription key="fontDescription" type="system" pointSize="27"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="累計積分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrz-b3-IqO">
-                        <rect key="frame" x="214" y="88.5" width="62" height="18"/>
+                        <rect key="frame" x="215" y="84.5" width="62" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="clN-D6-YSd"/>
                         </constraints>
@@ -110,18 +110,18 @@
                     <constraint firstItem="djh-Vm-S9V" firstAttribute="centerY" secondItem="a7J-EE-SG2" secondAttribute="centerY" id="1yb-At-f1N"/>
                     <constraint firstAttribute="bottom" secondItem="SMu-4E-Fsk" secondAttribute="bottom" id="5N1-rB-kfy"/>
                     <constraint firstItem="a7J-EE-SG2" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="6wg-63-0yg"/>
+                    <constraint firstItem="aw5-qs-8Zo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="9Pl-ot-hc8"/>
                     <constraint firstItem="SMu-4E-Fsk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="CYO-zr-5hb"/>
                     <constraint firstItem="SMu-4E-Fsk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="IPN-sj-SVF"/>
                     <constraint firstItem="A0y-HS-z66" firstAttribute="bottom" secondItem="K7C-DR-feW" secondAttribute="bottom" id="LsV-Sw-WPJ"/>
                     <constraint firstItem="0RN-Pe-QGG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="PB1-7a-2eI"/>
                     <constraint firstItem="hrz-b3-IqO" firstAttribute="bottom" secondItem="A0y-HS-z66" secondAttribute="bottom" id="TYT-9H-Zfc"/>
                     <constraint firstItem="a7J-EE-SG2" firstAttribute="leading" secondItem="djh-Vm-S9V" secondAttribute="trailing" constant="12" id="TZy-7n-i1F"/>
-                    <constraint firstAttribute="bottom" secondItem="K7C-DR-feW" secondAttribute="bottom" constant="12" id="TlL-b6-7Tq"/>
+                    <constraint firstAttribute="bottom" secondItem="K7C-DR-feW" secondAttribute="bottom" constant="16" id="TlL-b6-7Tq"/>
                     <constraint firstItem="K7C-DR-feW" firstAttribute="top" secondItem="ovV-4u-RGL" secondAttribute="bottom" constant="4" id="WK0-gb-OGP"/>
-                    <constraint firstAttribute="bottom" secondItem="aw5-qs-8Zo" secondAttribute="bottom" constant="20" id="YAf-DS-pKT"/>
                     <constraint firstAttribute="trailing" secondItem="aw5-qs-8Zo" secondAttribute="trailing" constant="85" id="Z2G-e1-rdN"/>
                     <constraint firstAttribute="trailing" secondItem="a7J-EE-SG2" secondAttribute="trailing" constant="20" id="aWX-Sv-HPK"/>
-                    <constraint firstItem="A0y-HS-z66" firstAttribute="leading" secondItem="hrz-b3-IqO" secondAttribute="trailing" constant="12" id="amu-Bn-1eK"/>
+                    <constraint firstItem="hrz-b3-IqO" firstAttribute="leading" secondItem="a7J-EE-SG2" secondAttribute="leading" constant="-90" id="bMc-UH-0CU"/>
                     <constraint firstItem="ovV-4u-RGL" firstAttribute="top" secondItem="0RN-Pe-QGG" secondAttribute="bottom" constant="4" id="gyC-XN-MYu"/>
                     <constraint firstItem="ovV-4u-RGL" firstAttribute="leading" secondItem="SMu-4E-Fsk" secondAttribute="trailing" constant="12" id="irW-0H-d4j"/>
                     <constraint firstItem="0RN-Pe-QGG" firstAttribute="leading" secondItem="SMu-4E-Fsk" secondAttribute="trailing" constant="12" id="l5t-k3-IEB"/>
