Establish the contribution progress bar

--- a/HomeMates/VIew/TaskTableViewCell/TasksTableViewCell.xib
+++ b/HomeMates/VIew/TaskTableViewCell/TasksTableViewCell.xib
@@ -75,6 +75,13 @@
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tUn-P4-yu8">
+                        <rect key="frame" x="76" y="90.5" width="279" height="8"/>
+                        <color key="backgroundColor" name="Y1"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="8" id="PqU-Ml-heA"/>
+                        </constraints>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="積分放在這" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K7C-DR-feW">
                         <rect key="frame" x="76" y="84.5" width="76.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -108,10 +115,13 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="djh-Vm-S9V" firstAttribute="centerY" secondItem="a7J-EE-SG2" secondAttribute="centerY" id="1yb-At-f1N"/>
+                    <constraint firstAttribute="bottom" secondItem="tUn-P4-yu8" secondAttribute="bottom" constant="20" id="2ii-qS-sr1"/>
                     <constraint firstAttribute="bottom" secondItem="SMu-4E-Fsk" secondAttribute="bottom" id="5N1-rB-kfy"/>
                     <constraint firstItem="a7J-EE-SG2" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="6wg-63-0yg"/>
+                    <constraint firstAttribute="trailing" secondItem="tUn-P4-yu8" secondAttribute="trailing" constant="20" id="7Un-aM-2cY"/>
                     <constraint firstItem="aw5-qs-8Zo" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="9Pl-ot-hc8"/>
                     <constraint firstItem="SMu-4E-Fsk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="CYO-zr-5hb"/>
+                    <constraint firstItem="tUn-P4-yu8" firstAttribute="leading" secondItem="ovV-4u-RGL" secondAttribute="leading" id="HqM-xT-ptN"/>
                     <constraint firstItem="SMu-4E-Fsk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="IPN-sj-SVF"/>
                     <constraint firstItem="A0y-HS-z66" firstAttribute="bottom" secondItem="K7C-DR-feW" secondAttribute="bottom" id="LsV-Sw-WPJ"/>
                     <constraint firstItem="0RN-Pe-QGG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="PB1-7a-2eI"/>
@@ -131,6 +141,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="contributionPersentView" destination="tUn-P4-yu8" id="Qe2-C0-fsB"/>
                 <outlet property="firstTextContraint" destination="XbR-pH-z0J" id="43l-Qc-scN"/>
                 <outlet property="memberNameText" destination="0RN-Pe-QGG" id="RM4-0S-P8x"/>
                 <outlet property="pointText" destination="K7C-DR-feW" id="AH1-jx-E0t"/>
@@ -148,6 +159,9 @@
     </objects>
     <resources>
         <image name="profile" width="24" height="24"/>
+        <namedColor name="Y1">
+            <color red="0.97254901960784312" green="0.81176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Y2">
             <color red="1" green="0.70196078431372544" blue="0.094117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
