--- a/HomeMates/VIew/Lobby/LobbyHeaderCell.xib
+++ b/HomeMates/VIew/Lobby/LobbyHeaderCell.xib
@@ -13,18 +13,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="290" id="KGk-i7-Jjw" customClass="LobbyHeaderCell" customModule="HomeMates" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="649" height="290"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="LobbyHeaderCell" customModule="HomeMates" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="649" height="289.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4B4-Db-hDp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nln-1N-Vbe">
-                                <rect key="frame" x="0.0" y="168" width="375" height="32"/>
+                                <rect key="frame" x="0.0" y="167.5" width="375" height="32"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bullhorn_36px" translatesAutoresizingMaskIntoConstraints="NO" id="dVH-Ii-0Vo">
                                         <rect key="frame" x="20" y="1" width="30" height="30"/>
@@ -58,17 +58,6 @@
                                     <constraint firstAttribute="width" constant="80" id="SVn-XO-bc9"/>
                                     <constraint firstAttribute="height" constant="80" id="V7I-Pq-VAr"/>
                                 </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="lkCornerRadius">
-                                        <real key="value" value="75"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="jqCornerRadius">
-                                        <real key="value" value="40"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="jqTest">
-                                        <real key="value" value="500"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="群組名稱在這邊" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iwy-Gm-tme">
                                 <rect key="frame" x="116" y="112" width="143" height="24"/>
@@ -83,7 +72,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDb-M4-jOE">
-                                <rect key="frame" x="324" y="140" width="31" height="24"/>
+                                <rect key="frame" x="324" y="139.5" width="31" height="24"/>
                                 <state key="normal" image="OtherMember"/>
                             </button>
                         </subviews>
@@ -93,7 +82,6 @@
                             <constraint firstAttribute="trailing" secondItem="nln-1N-Vbe" secondAttribute="trailing" id="Cgs-f4-16m"/>
                             <constraint firstItem="ua9-dG-jSk" firstAttribute="top" secondItem="iwy-Gm-tme" secondAttribute="bottom" constant="8" symbolic="YES" id="Fgl-jA-zkz"/>
                             <constraint firstItem="iwy-Gm-tme" firstAttribute="centerX" secondItem="q1h-s6-dEj" secondAttribute="centerX" id="Fgz-Ln-Et6"/>
-                            <constraint firstAttribute="height" constant="200" id="JlJ-Ne-m03"/>
                             <constraint firstAttribute="bottom" secondItem="nln-1N-Vbe" secondAttribute="bottom" id="L1o-7v-LpW"/>
                             <constraint firstItem="iwy-Gm-tme" firstAttribute="top" secondItem="q1h-s6-dEj" secondAttribute="bottom" constant="12" id="LjK-sg-cam"/>
                             <constraint firstAttribute="trailing" secondItem="gDb-M4-jOE" secondAttribute="trailing" constant="20" id="kQ6-O5-eSE"/>
@@ -118,7 +106,7 @@
                 <outlet property="groupName" destination="iwy-Gm-tme" id="foC-cN-77w"/>
                 <outlet property="lubbyBulletin" destination="JKt-7S-BEQ" id="HH7-54-yBG"/>
             </connections>
-            <point key="canvasLocation" x="47.10144927536232" y="73.660714285714278"/>
+            <point key="canvasLocation" x="-194.20289855072465" y="23.772321428571427"/>
         </tableViewCell>
     </objects>
     <resources>
