--- a/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
+++ b/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
@@ -13,25 +13,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="313" id="KGk-i7-Jjw" customClass="ProfileHeaderViewCell" customModule="HomeMates" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="401" height="313"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ProfileHeaderViewCell" customModule="HomeMates" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="401" height="221"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="401" height="312.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="401" height="220.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7sA-hh-dIV">
-                        <rect key="frame" x="0.0" y="0.0" width="401" height="220"/>
+                        <rect key="frame" x="0.0" y="0.0" width="401" height="220.5"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KI6-DD-HrT">
-                                <rect key="frame" x="0.0" y="160" width="401" height="60"/>
+                                <rect key="frame" x="0.0" y="160.5" width="401" height="60"/>
                                 <color key="backgroundColor" name="Y0"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="EUR-4W-nQn"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m8m-vg-zhh">
-                                <rect key="frame" x="30" y="88" width="341" height="120"/>
+                                <rect key="frame" x="30" y="88.5" width="341" height="120"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="家庭成員名稱" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0J-0b-02z">
                                         <rect key="frame" x="121.5" y="14" width="98" height="19.5"/>
@@ -116,17 +116,6 @@
                                             <constraint firstAttribute="width" constant="80" id="Ax0-fq-wgO"/>
                                             <constraint firstAttribute="height" constant="80" id="IQu-mG-UhX"/>
                                         </constraints>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="lkCornerRadius">
-                                                <real key="value" value="75"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="jqCornerRadius">
-                                                <real key="value" value="40"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="jqTest">
-                                                <real key="value" value="500"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -144,7 +133,6 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="m8m-vg-zhh" secondAttribute="bottom" constant="12" id="02a-IW-T8v"/>
                             <constraint firstItem="ENa-kW-vuh" firstAttribute="centerX" secondItem="7sA-hh-dIV" secondAttribute="centerX" id="DfB-fP-R7i"/>
-                            <constraint firstAttribute="height" constant="220" id="TSZ-9I-SJf"/>
                             <constraint firstItem="m8m-vg-zhh" firstAttribute="leading" secondItem="7sA-hh-dIV" secondAttribute="leading" constant="30" id="Uxj-U0-XN9"/>
                             <constraint firstAttribute="bottom" secondItem="KI6-DD-HrT" secondAttribute="bottom" id="Xsh-aW-0dG"/>
                             <constraint firstItem="KI6-DD-HrT" firstAttribute="leading" secondItem="7sA-hh-dIV" secondAttribute="leading" id="YNz-nk-Ikw"/>
@@ -172,7 +160,7 @@
                 <outlet property="totalPointText" destination="ACy-m4-uOf" id="eLs-Wa-yHE"/>
                 <outlet property="totalTimesText" destination="UNO-2n-Foa" id="srW-gV-z3R"/>
             </connections>
-            <point key="canvasLocation" x="-152.89855072463769" y="143.63839285714286"/>
+            <point key="canvasLocation" x="-152.89855072463769" y="112.83482142857142"/>
         </tableViewCell>
     </objects>
     <resources>
