--- a/HomeMates/VIew/Statistics/EventCell.xib
+++ b/HomeMates/VIew/Statistics/EventCell.xib
@@ -20,56 +20,65 @@
                 <rect key="frame" x="0.0" y="0.0" width="342" height="135.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VNM-Oe-6nk">
+                        <rect key="frame" x="12" y="8" width="318" height="119.5"/>
+                        <color key="backgroundColor" red="1" green="0.50980392156862742" blue="0.094117647058823528" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="洗衣服" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7h-cC-z0i">
-                        <rect key="frame" x="20" y="46" width="40" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="20" y="47.5" width="43" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="本日完成任務" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Plj-PQ-7XT">
-                        <rect key="frame" x="16" y="16" width="310" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <rect key="frame" x="16" y="16" width="310" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="預計完成任務" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ppz-xH-Dg7">
-                        <rect key="frame" x="16" y="82" width="310" height="5.5"/>
-                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                        <rect key="frame" x="16" y="84.5" width="310" height="2"/>
+                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="洗衣服" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Epo-V8-sRH">
-                        <rect key="frame" x="20" y="99.5" width="306" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="20" y="98.5" width="306" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="執行者：小明" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fil-U2-syV">
-                        <rect key="frame" x="246" y="46" width="80" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <rect key="frame" x="232" y="47.5" width="86" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Plj-PQ-7XT" secondAttribute="trailing" constant="16" id="0hH-CP-g7z"/>
+                    <constraint firstItem="VNM-Oe-6nk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="1kf-XB-xeI"/>
                     <constraint firstItem="Epo-V8-sRH" firstAttribute="top" secondItem="ppz-xH-Dg7" secondAttribute="bottom" constant="12" id="6g7-Qi-eEm"/>
                     <constraint firstAttribute="trailing" secondItem="ppz-xH-Dg7" secondAttribute="trailing" constant="16" id="9Sr-8y-ieo"/>
                     <constraint firstAttribute="trailing" secondItem="Epo-V8-sRH" secondAttribute="trailing" constant="16" id="A2i-Fj-zHW"/>
                     <constraint firstItem="d7h-cC-z0i" firstAttribute="top" secondItem="Plj-PQ-7XT" secondAttribute="bottom" constant="12" id="AkE-H3-rUq"/>
                     <constraint firstItem="fil-U2-syV" firstAttribute="top" secondItem="d7h-cC-z0i" secondAttribute="top" id="DWC-CL-e2d"/>
-                    <constraint firstAttribute="trailing" secondItem="fil-U2-syV" secondAttribute="trailing" constant="16" id="Fnk-ja-CfT"/>
+                    <constraint firstAttribute="trailing" secondItem="fil-U2-syV" secondAttribute="trailing" constant="24" id="Fnk-ja-CfT"/>
                     <constraint firstItem="d7h-cC-z0i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Gvg-ev-eRy"/>
                     <constraint firstAttribute="bottom" secondItem="Epo-V8-sRH" secondAttribute="bottom" constant="20" id="R5F-7p-oCH"/>
                     <constraint firstItem="Plj-PQ-7XT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="W9F-Oi-aOF"/>
                     <constraint firstItem="ppz-xH-Dg7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ZyM-hU-5QL"/>
                     <constraint firstItem="Epo-V8-sRH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="cmK-7t-z9L"/>
+                    <constraint firstItem="VNM-Oe-6nk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="iR6-ai-T65"/>
                     <constraint firstItem="Plj-PQ-7XT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="no9-9c-bBN"/>
                     <constraint firstItem="ppz-xH-Dg7" firstAttribute="top" secondItem="d7h-cC-z0i" secondAttribute="bottom" constant="20" id="wbL-Pi-g4P"/>
+                    <constraint firstAttribute="bottom" secondItem="VNM-Oe-6nk" secondAttribute="bottom" constant="8" id="ybU-Ea-cUs"/>
+                    <constraint firstAttribute="trailing" secondItem="VNM-Oe-6nk" secondAttribute="trailing" constant="12" id="zUz-xJ-Who"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="backgroundViewImage" destination="VNM-Oe-6nk" id="V1H-ML-1TP"/>
                 <outlet property="doneEventText" destination="d7h-cC-z0i" id="8j4-F0-Imf"/>
                 <outlet property="excutorNameText" destination="fil-U2-syV" id="LEB-TI-6LO"/>
                 <outlet property="willdoEventText" destination="Epo-V8-sRH" id="7G0-na-45S"/>
